<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_dialog_privacy">"By signing in, you accept that Sony Mobile will collect your &lt;a href='%1$s'>personal data&lt;/a> to backup your content. Sony Mobile will handle your data per our &lt;a href='%2$s'>Privacy Policy&lt;/a>."</string>
    <string name="about_dialog_privacy_labs">"By signing in, you accept that Sony Mobile will collect your &lt;a href='%1$s'>personal data&lt;/a> to backup your content and analyze your scans. Sony Mobile will handle your data per our &lt;a href='%2$s'>Privacy Policy&lt;/a>."</string>
    <string name="about_open_source">Open source licenses</string>
    <string name="about_software_version">Software version</string>
    <string name="about_technology_intro">"3D Creator is a real-time 3D scanning system based on a single camera. It consists mainly of three mathematical parts:

1) Positioning in 3D space using only camera

2) Point cloud calculation based on two pictures

3) A 3D sculpting algorithm creating the 3D model in real time"</string>
    <string name="about_technology_point_cloud_description">Based on the camera orientation and the captured images we create a <b>point cloud</b>. The point cloud is quite rough, and consists only of points in 3D space and no color. Based on the point cloud information, a <b>mesh</b> is created. This mesh, or \"lump of clay\", is what we will bring to the next stage of the process - the sculpting.</string>
    <string name="about_technology_point_cloud_title">Creating a point cloud</string>
    <string name="accessibility_back_button">Navigate up</string>
    <string name="accessibility_texture_button">Texture</string>
    <string name="ca_privacy_notice">CA Privacy Notice</string>
    <string name="details_fragment_is_improved">This model has been improved</string>
    <string name="dialog_tutorial_accept_button">Got it</string>
    <string name="dialog_viewer_tutorial_pinch">Pinch to zoom</string>
    <string name="dialog_viewer_tutorial_rotate">Use one finger to rotate</string>
    <string name="focus_type_setting">@string/focus_type_auto</string>
    <string name="gallery_preference_scanning_sound_summary">Play sound feedback during scanning</string>
    <string name="gallery_preference_scanning_sound_title">Sound</string>
    <string name="original_model">Original</string>
    <string name="pref_awb_lock">Auto white balance lock</string>
    <string name="pref_awb_lock_summary">When enabled, auto white bealance is locked during scanning.</string>
    <string name="pref_ca_privacy_notice">pref_ca_privacy_notice</string>
    <string name="pref_calib_reset">pref_calib_reset</string>
    <string name="pref_camera_calib_reset">Reset camera calibration</string>
    <string name="pref_camera_calib_reset_descr">If scan quality starts to decrease then you may need to reset camera calibration. This can happen if the phone has been dropped.</string>
    <string name="pref_clear_prefs_summary">Clears default app preferences and restarts the app. Current preferences can be restored later.</string>
    <string name="pref_clear_prefs_title">Clear preferences</string>
    <string name="pref_edge_enhancement">Edge enhancement</string>
    <string name="pref_edge_enhancement_summary">When enabled, edge enhancement is used in the camera image pipeline.</string>
    <string name="pref_focus_type">Focus type</string>
    <string name="pref_focus_type_summary">The type of focusing used by the camera.</string>
    <string name="pref_key_awb_lock">pref_awb_lock</string>
    <string name="pref_key_boost">key_boost</string>
    <string name="pref_key_ceres_solver">key_ceres_solver</string>
    <string name="pref_key_clear_preferences">pref_clear_preferences</string>
    <string name="pref_key_debug_buttons_enabled">pref_key_debug_buttons_enabled</string>
    <string name="pref_key_dlib">key_dlib</string>
    <string name="pref_key_edge_enhancement">pref_edge_enhancement</string>
    <string name="pref_key_eigen">key_eigen</string>
    <string name="pref_key_focus_type">pref_focus_type</string>
    <string name="pref_key_jpeg">key_jpeg</string>
    <string name="pref_key_loki">key_loki</string>
    <string name="pref_key_lua">key_lua</string>
    <string name="pref_key_mindroid">key_mindroidr</string>
    <string name="pref_key_minizip">key_minizip</string>
    <string name="pref_key_noise_reduction">pref_noise_reduction</string>
    <string name="pref_key_open_source">key_open_source</string>
    <string name="pref_key_opencv">key_opencv</string>
    <string name="pref_key_poly2tri">key_poly2tri</string>
    <string name="pref_key_pugixml">key_pugixml</string>
    <string name="pref_key_restore_preferences">pref_restore_preferences</string>
    <string name="pref_key_scanning_sound">pref_key_scanning_sound</string>
    <string name="pref_key_settings">pref_settings</string>
    <string name="pref_key_use_lamp">pref_use_lamp</string>
    <string name="pref_key_version">pref_version</string>
    <string name="pref_key_xmltojson">key_xmltojson</string>
    <string name="pref_noise_reduction">Noise reduction</string>
    <string name="pref_noise_reduction_summary">When enabled, noise reduction is used in the camera image pipeline.</string>
    <string name="pref_restore_prefs_summary">Restores preferences that were used before last clear.</string>
    <string name="pref_restore_prefs_title">Restore preferences</string>
    <string name="pref_use_debug_buttons">Enable debug buttons</string>
    <string name="pref_use_debug_buttons_summary">Press Camera button to switch sculpting state and Volume down button to show advanced UI during scanning.</string>
    <string name="pref_use_lamp">Use lamp</string>
    <string name="pref_use_lamp_summary">Use extra light when scanning.</string>
    <string name="preference_devsettings_title">Developer settings</string>
    <string name="print_3rd_party_plugins_height_large">15 CM</string>
    <string name="print_3rd_party_plugins_height_medium">10 CM</string>
    <string name="print_3rd_party_plugins_height_small">5 CM</string>
    <string name="print_3rd_party_plugins_no_apps_descr">If your printer does not support direct printing from the 3D Creator app, you can share your model as a file instead.</string>
    <string name="print_3rd_party_plugins_no_apps_title">No supported printer apps found</string>
    <string name="print_customization_height_title">Size</string>
    <string name="print_customization_title">Customize</string>
    <string name="print_select_howto_print">Select how to print</string>
    <string name="screen_event_tips_short">Short tips</string>
    <string name="settings_about_text">About</string>
    <string name="share_advanced_option_height_normal_map_text">"Recommended if you will use the model in:
- the 3D Creator app
- games
- 3D modeling software"</string>
    <string name="share_advanced_option_height_normal_map_title">Height map and normal map</string>
    <string name="share_advanced_option_tessellated_mesh_text">"Recommended if the shape of the model is more important than the texture, for example:
- 3D printing
- CAD programs"</string>
    <string name="share_advanced_option_tessellated_mesh_title">Tessellated mesh</string>
    <string name="share_as_file_title">Share as file</string>
    <string name="show_system_settings">Show system settings</string>
    <string name="show_system_settings_descr">Manage application and permissions</string>
    <string name="storage_service_signin_learn_more_title_txt">If the sign-in problem persists, please try the following:</string>
    <string name="storage_service_signin_learn_more_workaround_activate_google_drive_txt">• Sign in to your account from a computer or in the Google Drive app, and make sure that Google Drive is enabled.</string>
    <string name="storage_service_signin_learn_more_workaround_clear_gsm_txt">• Clear app data for Google Play services in Settings > Apps &amp; notifications > Google Play services > Storage > MANAGE SPACE > CLEAR ALL DATA</string>
    <string name="storage_service_signin_learn_more_workaround_notifications_txt">• Check if you have received a notification instructing you to go to Settings > Accounts, and sign in there first.</string>
    <string name="storage_service_signin_learn_more_workaround_restart_txt">• Restart your device</string>
    <string name="storage_service_signin_learn_more_workaround_update_gsm_txt">• Update Google Play services</string>
    <string name="tip_dialog_action_open_share">action_open_share</string>
    <string name="tip_dialog_button_learn_more">LEARN MORE</string>
    <string name="tips_short_env_movement_short_desc">"Don't scan in an environment where there is movement in the background"</string>
    <string name="tips_short_face_scan_suggestion_short_desc">If the environment around the object is not optimal (not enough space, movement or bad lighting), a face scan may work better than a head scan.</string>
    <string name="tips_short_lens_short_desc">If your model looks blurry, it may help to clean the camera lens.</string>
    <string name="tips_short_selfie_eyes_short_desc">You may get a better selfie scan if you keep looking straight ahead during scanning, instead of looking at the phone.</string>
    <string name="tips_short_share_short_desc">Share your model with the world</string>
    <string name="tips_short_wallpaper_short_desc">You can use your model as a live wallpaper</string>
    <string name="title_license_boost">Boost</string>
    <string name="title_license_ceres_solver">Ceres Solver</string>
    <string name="title_license_dlib">dlib</string>
    <string name="title_license_eigen">Eigen</string>
    <string name="title_license_jpeg">JPEG</string>
    <string name="title_license_loki">Loki</string>
    <string name="title_license_lua">Lua</string>
    <string name="title_license_mindroid">Mindroid</string>
    <string name="title_license_minizip">minizip</string>
    <string name="title_license_opencv">OpenCV</string>
    <string name="title_license_poly2tri">Poly2Tri</string>
    <string name="title_license_pugixml">pugixml</string>
    <string name="title_license_xmltojson">XmlToJson</string>
</resources>