<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.sonymobile.scan3d.viewer.ViewerGLTextureView android:id="@id/glTextureView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:orientation="vertical" android:id="@id/non_fullscreen_window" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/actions" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@id/viewer_name" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <FrameLayout android:id="@id/texture_knob_parent" android:background="?android:actionBarItemBackground" android:padding="@dimen/icon_button_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/viewer_activity_navigation_button_margin">
                <ToggleButton android:id="@id/texture_knob" android:background="@drawable/visibility_knob" android:clickable="false" android:layout_width="@dimen/icon_button_size" android:layout_height="@dimen/icon_button_size" android:checked="false" android:textOn="@null" android:textOff="@null" android:contentDescription="@string/accessibility_texture_button" />
            </FrameLayout>
        </LinearLayout>
        <View android:id="@id/line" android:background="@android:color/white" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_above="@id/split_screen" />
        <com.sonymobile.scan3d.viewer.SplitScreenView android:textSize="14.0sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/split_screen" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginBottom="16.0dip" android:lines="1" android:drawablePadding="8.0dip" android:layout_above="@id/bottom_bar" app:handle_drawable="@drawable/ic_drag_handle" app:offset="16.0dip" app:padding_end="16.0dip" app:padding_start="8.0dip" app:text_left="@string/details_fragment_is_improved" app:text_right="@string/original_model" />
        <FrameLayout android:id="@id/bottom_bar" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</FrameLayout>
